Atualizando page para rodar corretamente

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@700;900&display=swap" rel="stylesheet">
     
-    <link rel="stylesheet" href="./style.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <div class="container">
@@ -27,7 +27,7 @@
         </div>
 
         <div id="resultado" class="hidden">
-             <img src="./img/hornet-vitoria.png" alt="Hornet com Guaraná" id="hornet-vitoria">
+            <img src="img/hornet-vitoria.png" alt="Hornet com Guaraná" id="hornet-vitoria">
             
             <h2>VITÓRIA!</h2>
             <p>Sua energia está a mil! Apresente o QR Code:</p>
@@ -35,6 +35,6 @@
         </div>
     </div>
 
-    <script src="./script.js"></script>
+    <script src="script.js"></script>
 </body>
 </html>
